JumpScript/tests/baselines/reference/scannerStringLiterals.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerStringLiterals.jump(10,34): error TS1002: Unterminated string literal.
tests/cases/conformance/scanner/ecmascript5/scannerStringLiterals.jump(11,38): error TS1002: Unterminated string literal.


==== tests/cases/conformance/scanner/ecmascript5/scannerStringLiterals.jump (2 errors) ====
    ""
    " "
    "a"
    "'"
    '"'
    "\""
    '\u2192\   '
    "Legal line continuation \
    "
    "Should error because of newline.
                                     
!!! error TS1002: Unterminated string literal.
    "Should error because of end of file.
                                         
!!! error TS1002: Unterminated string literal.